--- a/index.html
+++ b/index.html
@@ -308,6 +308,25 @@
                         <div class="col-md-12">
                            <div class="timeline-centered">
 
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-5">
+                                       <i class="fa fa-globe"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">Uplara</a> <span>May-July'20</span></h2>
+                                       <p><strong>Virtual Try-On</strong><br>
+                                       <ul>
+                                          <li>Texture generation of human from multiple views following a UV template structure</li>
+                                          <li>Segmentation and Keypoint detection of feet images from a video by replicating state-of-the-art techniques from available codes to TensorFlow frameworks</li>
+                                          <li>Cloth parser for segmenting the input images of a person that can be used further in Try-On pipeline</li>
+                                       </ul> 
+                                    </p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
+				
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-5">
